--- a/data/css/style.css
+++ b/data/css/style.css
@@ -65,6 +65,11 @@ pre {
 	white-space: pre-wrap; /* CSS 2.1 */
 	white-space: pre-line; /* CSS 3 (and 2.1 as well, actually) */
 	word-wrap: break-word; /* IE */
+	background-color:#eee;
+	margin-top:1em;
+	margin-bottom:1em;
+	padding-left:1em;
+	 -webkit-border-radius: 15px; -moz-border-radius: 15px; border-radius: 15px;
 }
 
 input[type="radio"] {vertical-align: text-bottom;}
