--- a/data/css/style.css
+++ b/data/css/style.css
@@ -72,7 +72,7 @@ hr {display: block; height: 1px; border: 0; border-top: 1px solid #ccc; margin: 
 
 input, select {vertical-align: middle;}
 
-pre {
+pre.config  {
 	white-space: pre; /* CSS2 */
 	white-space: pre-wrap; /* CSS 2.1 */
 	white-space: pre-line; /* CSS 3 (and 2.1 as well, actually) */
@@ -82,6 +82,19 @@ pre {
 	margin-bottom:1em;
 	padding-left:1em;
 	 -webkit-border-radius: 15px; -moz-border-radius: 15px; border-radius: 15px;
+}
+
+pre.code  {
+	background-color:#555;
+	color:#fff;
+	border:0px solid black;
+	box-shadow: 5px 5px 10px #999;
+	text-shadow:0.1em 0.1em 0.2em rgba(0, 0, 0, 0.5);
+	padding: 5px 5px 0px 5px;
+	text-indent: 0px;
+	font-family: courier, monospace;
+	font-size: 80%;
+	-webkit-border-radius: 3px; -moz-border-radius: 3px; border-radius: 3px;
 }
 
 input[type="radio"] {vertical-align: text-bottom;}
@@ -311,20 +324,6 @@ a.contactImg {display: block; position: absolute; bottom: 0; left: 50%;}
 
 #updated:after {content: ""; position: absolute; bottom: -10px; left: 0; width: 0; height: 0; border-left: 20px solid transparent; border-right: 20px solid transparent; border-top: 10px solid #000;}
 
-
-div.codebox {
-
-	background-color:#555;
-	color:#fff;
-	border:0px solid black;
-	box-shadow: 5px 5px 10px #999;
-	text-shadow:0.1em 0.1em 0.2em rgba(0, 0, 0, 0.5);
-	padding: 5px 5px 5px 15px;
-	font-family: courier, monospace;
-	font-size: 80%;
-	-webkit-border-radius: 3px; -moz-border-radius: 3px; border-radius: 3px;
-
-}
 
 
 /* Print styles!
