--- a/Documentation/css/style.css
+++ b/Documentation/css/style.css
@@ -144,7 +144,8 @@ body {
 	color: #2B373D;
 	font: normal 14px/20px Helmet, Freesans, sans-serif; /* new, Linux- and Windows-friendly font stack: http://mky.be/fontstack */
 	margin: 60px 0 36px;
-	padding: 0;
+	padding: 50px 0px 0px 50px;
+	font-family: normal 14px/20px "aurea-ultra-1", "aurea-ultra-2" , palatino, georgia, times, serif;
 }
 
 	.ie body {margin-top: 40px;}
@@ -184,11 +185,19 @@ body {width: 90%; max-width: 580px; margin: 0 auto;}
 	.ie body {text-align: center;}
 	.ie div.wrapper {text-align: left; width: 580px;}
 
-.article .titlepage h2.title  {position: relative; width: 224px; margin: 0 0 18px; font: normal 51px/40px "aurea-ultra-1", "aurea-ultra-2", georgia, times, serif;}
+.article .titlepage h2.title
+{
+  position: relative; width: 224px; margin: 0 0 18px;
+  font: normal 51px/40px "aurea-ultra-1", "aurea-ultra-2", georgia, times, serif;
+
+}
 	h1 strong {display: block; font-size: 56px;}
 
 /* XXX */
-.article .section .titlepage h2.title  {margin-top: 25px; margin-bottom: 12px; padding-top: 15px; font-family: Kaffeesatz, palatino, georgia, times, serif; font-weight:bold; font-size: 18px;  color: #222; text-transform: uppercase;}
+.article .section .titlepage h2.title
+{
+	margin-top: 25px; margin-bottom: 12px; padding-top: 15px;
+  font-family: "aurea-ultra-1", "aurea-ultra-2", palatino, georgia, times, serif; font-weight:bold; font-size: 18px;  color: #222; text-transform: uppercase;}
 	
 .article .section {  }
 	
@@ -202,7 +211,9 @@ nav {margin: 0 0 30px; padding-top: 12px; border-top: 3px solid #cecece; text-al
 	nav ol li {display: inline-block; margin-bottom: 6px; padding-right: 12px;}
 		nav ol li:last-child {padding-right: 0;}
 		
-		nav ol li a {text-decoration: none; font-size: 22px; text-transform: uppercase; color: #444; font-family: Kaffeesatz, palatino, georgia, times, serif; font-weight:bold; white-space: nowrap;}
+		nav ol li a {text-decoration: none; font-size: 22px; text-transform:
+		uppercase; color: #444;
+	font-family: "aurea-ultra-1", "aurea-ultra-2", palatino, georgia, times, serif; font-weight:bold; white-space: nowrap;}
 			nav ol li a:after {content: "\2605"; position: absolute; top: 100%; display: block; width: 100%; text-align: center; font-size: 10px; line-height: 10px; color: #f7f7f7; -webkit-transition: all 0.3s ease; -moz-transition: all 0.3s ease; -o-transition: all 0.3s ease; transition: all 0.3s ease;}
 			nav ol li a:hover:after {color: #009;}
 
@@ -210,7 +221,10 @@ hr {display: none; height: 0; width: 25%; margin: 50px auto 50px; border: 0; bor
 
 .article .section {margin: 0 auto 50px;}
 .
-.article .section h1 {width: auto; margin-top: 70px; padding-top: 10px; font-size: 24px; line-height: 24px; color: #222; font-family: Kaffeesatz, palatino, georgia, times, serif; font-weight:bold;}
+.article .section h1 {width: auto; margin-top: 70px;
+padding-top: 10px; font-size: 24px; line-height: 24px;
+color: #222;
+font-family: "aurea-ultra-1", "aurea-ultra-2", palatino, georgia, times, serif; font-weight:bold;}
 .
 .article .section p {margin-bottom: 18px;}
 .	
@@ -340,41 +354,4 @@ a.contactImg {display: block; position: absolute; bottom: 0; left: 50%;}
 #updated:after {content: ""; position: absolute; bottom: -10px; left: 0; width: 0; height: 0; border-left: 20px solid transparent; border-right: 20px solid transparent; border-top: 10px solid #000;}
 
 
-
-/* Print styles!
--------------------------------------------------------------------------------*/
-@media print {
-
-
-
-}
-
-
-/* Media queries!
--------------------------------------------------------------------------------*/
-
-/* Consider this: www.cloudfour.com/css-media-query-for-mobile-is-fools-gold/ */
-@media screen and (max-device-width: 480px) {
-	
-		body {margin-top: 10px;}
-		div.wrapper {width: 90%; max-width: auto; margin: 0 auto;}
-		#updated {top: 10px; left: 80%;}
-		article figure {width: auto; max-width: 100%; float: none; margin: 0 auto 18px;}
-		article figure img {width: 100%;}
-		
-		nav {padding-top: 4px;}
-		nav ol li {display: block; padding-right: 0;}
-		nav ol li a {display: block; margin-bottom: 4px; text-align: center; background: #eee; line-height: 30px;}
-			nav ol li a:after {content: ""; display: none; position: static;}
-			nav ol li a:hover {color: #444;}
-		
-}
-
-@media all and (orientation: portrait) {
-	
-}
-
-@media all and (orientation: landscape) {
-	
-}
 
