--- a/css/docs.css
+++ b/css/docs.css
@@ -21,27 +21,9 @@ body {
   font-family: 'Doppio One';
   font-style: normal;
   font-weight: 400;
-  src: local('Doppio One Regular'), local('DoppioOne-Regular'), url('http://themes.googleusercontent.com/static/fonts/doppioone/v1/DGr_HuCg-_zePcleoqvEXxsxEYwM7FgeyaSgU71cLG0.woff') format('woff');
+  src: local('Doppio One Regular'), local('DoppioOne-Regular'), url('font.woff') format('woff');
 }
 
-
-/* Tweak navbar brand link to be super sleek
--------------------------------------------------- */
-/* .navbar-fixed-top .brand {
-  padding-right: 0;
-  padding-left: 0;
-  margin-left: 20px;
-  float: right;
-  font-weight: bold;
-  color: #000;
-  text-shadow: 0 1px 0 rgba(255,255,255,.1), 0 0 30px rgba(255,255,255,.125);
-  -webkit-transition: all .2s linear;
-     -moz-transition: all .2s linear;
-          transition: all .2s linear;
-}
-.navbar-fixed-top .brand:hover {
-  text-decoration: none;
-} */
 
 
 /* Space out sub-sections more
